force-app/main/default/objects/smagicinteract__Converse_Desk_User_Config__c/smagicinteract__Converse_Desk_User_Config__c.object-meta.xml
<CustomObject>
    <description>This object will store information about which fields to be used to for showing conversation listing. This setting will be configurable per user.</description>
    <label>Converse Desk User Config</label>
    <nameField>
        <displayFormat>CDUC-{00000000}</displayFormat>
        <label>Converse Desk User Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converse Desk User Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>