force-app/main/default/objects/smagicinteract__Converse_Desk_User_Config__c/fields/smagicinteract__Listing_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Listing_Field__c</fullName>
    <description>Api name of the field to be displayed on the conversation listing.</description>
    <inlineHelpText>Api name of the field to be displayed on the conversation listing.</inlineHelpText>
    <label>Listing Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>