force-app/main/default/objects/smagicinteract__Converse_Desk_User_Config__c/fields/smagicinteract__Message_Object_Config__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Message_Object_Config__c</fullName>
    <description>Stores the ID of the moc for which the config is done.</description>
    <inlineHelpText>Stores the ID of the moc for which the config is done.</inlineHelpText>
    <label>Message Object Config</label>
    <referenceTo>smagicinteract__Message_Object_Config__c</referenceTo>
    <relationshipLabel>Converse Desk User Configs</relationshipLabel>
    <relationshipName>Converse_Desk_User_Configs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>