force-app/main/default/objects/smagicinteract__Converse_Desk_User_Config__c/fields/smagicinteract__Template_Field__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Template_Field__c</fullName>
    <description>Stores which template field to show. If blank no field will be shown</description>
    <inlineHelpText>Stores which template field to show. If blank no field will be shown</inlineHelpText>
    <label>Template Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>