force-app/main/default/objects/smagicinteract__Converse_Desk_User_Config__c/fields/smagicinteract__User__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the ID of the user for whom the config is done.</description>
    <inlineHelpText>Stores the ID of the user for whom the config is done.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Converse_Desk_User_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>